syntax = "proto3";

//import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package report_proto;
option go_package = "grpc/report_proto";

service ReportService {
  rpc ListByFilter(ReportListFilter) returns (Reports);
}

enum REPORT_BY {
  HOUR = 0;
  DAY = 1;
  WEEK = 2;
  MONTH = 3;
}
message ReportListFilter {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
  REPORT_BY report_by_period = 3;
  google.protobuf.Int64Value user_id = 4;
}
message Report {
  google.protobuf.Timestamp date = 1;
  string event_type = 2;
  Cost cost = 3;
  uint64 count = 4;
}
message Reports {
  repeated Report reports = 1;
}

message Cost {
  int64 amount = 1;
  string currency = 2;
}
